--- a/IntuitERP/Viwes/Reports/ReportsPage.xaml
+++ b/IntuitERP/Viwes/Reports/ReportsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IntuitERP.Viwes.Reports.ReportsPage"
-             Title="NewPage1">
+             Title="">
     <ScrollView>
         <VerticalStackLayout Spacing="15" Padding="30,20">
             <Label
